--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "capibara",
   "displayName": "Capibara",
   "description": "Crowd-sourced C API hover definitions.",
-  "version": "0.0.1",
+  "author": {"name": "Justin Woodring", "url": "https://justinwoodring.com"},
+  "publisher": "Capibara",
+  "sponsor": {
+    "url": "https://github.com/sponsors/JustinWoodring"
+  },
+  "license": "MIT",
+  "repository": {"url": "https://github.com/Capibara-Tools/capibara-vs-code"},
+  "pricing": "Free",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.73.0"
   },
@@ -19,7 +27,7 @@
     "onCommand:capibara.fetchLatestDefinitions",
     "onLanguage:c"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/main.js",
   "contributes": {
     "commands": [
       {
@@ -39,12 +47,13 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "test-compile": "tsc -p ./",
+    "test-watch": "tsc -watch -p ./",
+    "lint": "eslint src --ext ts"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
@@ -54,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vscode/test-electron": "^2.2.0",
+    "esbuild": "^0.16.12",
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
